--- a/games/run3/index.html
+++ b/games/run3/index.html
@@ -32,7 +32,7 @@
 
 <div class="image-container">
 
-  <iframe src="" style="height: 70vh; width: 60vw; border: 3px solid #fff; border-radius: 15px;">
+  <iframe src="run3/" style="height: 70vh; width: 60vw; border: 3px solid #fff; border-radius: 15px;">
       
 </div>
 
