--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
 <div class="image-container">
 
-    <a href="/games/run3.html">
-      <img src="/">
+    <a href="/games/run3/">
+      <img src="/games/run3/run3/run3.png">
     </a>
       
 </div>
