--- a/games/run3/index.html
+++ b/games/run3/index.html
@@ -16,21 +16,21 @@
 <button class="link-left">GEOMETRY HELPER</button>
 </a>
 
-<a href="">
+<a href="/settings.html">
 <button class="links-right">SETTINGS <i class="fa-solid fa-gear"></i></button>
 </a>
 
-<a href="">
-<button class="links-right">APPS <i class="fa-solid fa-border-all"></i></button>
+<a href="/partners.html">
+<button class="links-right">PARTNERS <i class="fa-solid fa-border-all"></i></button>
 </a>
 
-<a href="">
-<button class="links-right" >GAMES <i class="fa-solid fa-gamepad"></i></button>
+<a href="/apps.html">
+<button class="links-right" >APPS <i class="fa-solid fa-gamepad"></i></button>
 </a>
 
 </nav>
 
-<div class="image-container">
+<div class="iframe-container">
 
   <iframe src="run3/" style="height: 70vh; width: 60vw; border: 3px solid #fff; border-radius: 15px;">
       
