--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
 <body>
 <nav>
 
-<a href="">
-<img src="https://cdn.discordapp.com/attachments/1292560475053359206/1292565611414818837/image_2024-10-06_151413178.png?ex=67043308&is=6702e188&hm=9d77c093ea376ef658790505d70db387a1bbfbc169d7cb03a00c6a0d065d5581&">
+<a href="/">
+<img src="/gh.png">
 <button class="link-left">GEOMETRY HELPER</button>
 </a>
 
-<a href="">
+<a href="/settings.html">
 <button class="links-right">SETTINGS <i class="fa-solid fa-gear"></i></button>
 </a>
 
-<a href="">
-<button class="links-right">APPS <i class="fa-solid fa-border-all"></i></button>
+<a href="/partners.html">
+<button class="links-right">PARTNERS <i class="fa-solid fa-user"></i></button>
 </a>
 
-<a href="">
-<button class="links-right" >GAMES <i class="fa-solid fa-gamepad"></i></button>
+<a href="/apps.html">
+<button class="links-right" >APPS <i class="fa-solid fa-gamepad"></i></button>
 </a>
 
 </nav>
