--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     <a href="/games/run3/">
       <img src="/games/run3/run3/run3.png">
     </a>
+
+    <a href="/games/1on1soccer/">
+      <img src="/games/1on1soccer/1on1soccer/splash.webp">
+    </a>
       
 </div>
 
