--- a/games/run3/index.html
+++ b/games/run3/index.html
@@ -6,6 +6,7 @@
 <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link rel="stylesheet" href="/styles.css">
+<link rel="icon" type="image/x-icon" href="/gh.ico">
 
 </head>
 <body>
@@ -24,6 +25,10 @@
 <button class="links-right">PARTNERS <i class="fa-solid fa-user"></i></button>
 </a>
 
+<a href="/bookmarks.html">
+<button class="links-right" >BOOKMARKS <i class="fa-solid fa-bookmark"></i></button>
+</a>
+    
 <a href="/apps.html">
 <button class="links-right" >APPS <i class="fa-solid fa-gamepad"></i></button>
 </a>
