--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
     <a href="/games/1on1soccer/">
       <img src="/games/1on1soccer/1on1soccer/splash.webp">
     </a>
+
+    <a href="/games/1v1lol/">
+      <img src="/games/1v1lol/1v1lol/splash.png">
+    </a>
       
 </div>
 
