--- a/games/awesometanks2/index.html
+++ b/games/awesometanks2/index.html
@@ -37,7 +37,7 @@
 
 <div class="iframe-container">
 
-  <iframe src="awesometanks2/" style="height: 70vh; width: 60vw; border: 3px solid #fff; border-radius: 15px;">
+  <iframe src="awesome-tanks-2/" style="height: 70vh; width: 60vw; border: 3px solid #fff; border-radius: 15px;">
       
 </div>
 
