--- a/index.html
+++ b/index.html
@@ -48,6 +48,46 @@
     <a href="/games/1v1lol/">
       <img src="/games/1v1lol/1v1lol/splash.png">
     </a>
+
+    <a href="/games/2048/">
+      <img src="/games/2048/2048/2048.png">
+    </a>
+
+    <a href="/games/alienhomind/">
+      <img src="/games/alienhomind/alienhominid/niggersinfected.webp">
+    </a>
+
+    <a href="/games/amongus/">
+      <img src="/games/amongus/among-us/red.png">
+    </a>
+
+    <a href="/games/angrybirds/">
+      <img src="/games/angrybirds/angrybirds/logo.webp">
+    </a>
+
+    <a href="/games/astray/">
+      <img src="/games/astray/astray/astray.jpeg">
+    </a>
+
+    <a href="/games/awesometanks2/">
+      <img src="/games/awesometanks2/awesome-tanks-2/icon.png">
+    </a>
+
+    <a href="/games/badicecream/">
+      <img src="/games/badicecream/bad-ice-cream/bad-ice-cream.png">
+    </a>
+
+    <a href="/games/badicecream2/">
+      <img src="/games/badicecream/bad-ice-cream-2/bad-ice-cream-2.png">
+    </a>
+
+    <a href="/games/badicecream3/">
+      <img src="/games/badicecream/bad-ice-cream-3/bad-ice-cream-3.png">
+    </a>
+
+    <a href="/games/basketballstars/">
+      <img src="/games/basketballstars/basketball-stars/assets/images/basketball-stars.png">
+    </a>
       
 </div>
 
